Update Installer.java